error_check.txt

>     Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
warning: unused import: `openracing_errors::RTError`
  --> crates\engine\src\hid\windows.rs:16:5
   |
16 | use openracing_errors::RTError;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `InvalidConfiguration` found for enum `RTError` in the current scope
    --> crates\engine\src\hid\windows.rs:2433:91
     |
2433 |         let c_path = std::ffi::CString::new(path).map_err(|_| openracing_errors::RTError::InvalidConfiguration)?;
     |                                                                                           ^^^^^^^^^^^^^^^^^^^^ variant or associated item not found in `RTError`

For more information about this error, try `rustc --explain E0599`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 1 previous error; 1 warning emitted


